get theme toggle working

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,13 @@
 ---
+const year = new Date().getFullYear()
 ---
 <footer>
-    <p>theRamoShe</p>
+    <p>&copy; {year} theRamoShe</p>
 </footer>
+
+<style>
+    footer {
+        text-align: center;
+        opacity: .5;
+    }
+</style>
