--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,7 +41,9 @@ const { title } = Astro.props;
 	</head>
 	<body>
 		<Header />
-		<slot />
+		<main>
+			<slot />
+		</main>
 		<Footer />
 	</body>
 </html>
@@ -62,16 +64,30 @@ const { title } = Astro.props;
 		--font-primary: 'Nunito', sans-serif;
 		--font-display: 'Permanent Marker', sans-serif;
 	}
+	/* * { border: 1px solid blue } */
 	html {
 		font-family: var(--font-primary);
-		background: var(--black);
-	}
-	body {
-		margin: auto;
-		padding: 1rem;
-		width: 1200px;
-		max-width: calc(100% - 2rem);
-		color: var(--white);
 		font-size: 20px;
+		--background-color: var(--black);
+		--text-color: var(--white);
+		color: var(--text-color);
+		background-color: var(--background-color);
+	}
+	[data-theme="light"] {
+		--background-color: var(--white);
+		--text-color: var(--black);
+	}
+	main {
+		margin: 0 auto;
+		max-width: 1000px;
+		padding: 0 100px;
+	}
+	@media (max-width: 1000px) {
+		html {
+			font-size: 16px;
+		}
+		body {
+			padding: 0 20px;
+		}
 	}
 </style>
