--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,19 +10,23 @@ import Action from '../components/sections/Action.astro';
 ---
 
 <Layout title="Myte by theRamoShe">
-	<main>
-		<Hero />
-		<Problem />
-		<Solution />
-		<Steps />
-		<Clients />
-		<Questions />
-		<Action />
-	</main>
+	<Hero />
+	<Problem />
+	<Solution />
+	<Steps />
+	<Clients />
+	<Questions />
+	<Action />
 </Layout>
 
 <style is:global>
 	h2 {
 		color: var(--gray-light);
+		font-family: var(--font-display);
+		text-align: center;
 	}
+	.light h2 {
+		color: var(--gray-dark);
+	}
+
 </style>
