--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,12 +20,12 @@ import Action from '../components/sections/Action.astro';
 </Layout>
 
 <style is:global>
-	h2 {
+	.section-title {
 		color: var(--gray-light);
 		font-family: var(--font-display);
 		text-align: center;
 	}
-	.light h2 {
+	.light .section-title {
 		color: var(--gray-dark);
 	}
 
