--- a/src/components/sections/Problem.astro
+++ b/src/components/sections/Problem.astro
@@ -1,7 +1,7 @@
 ---
 import { Icon } from 'astro-icon'
 ---
-<h2>
+<h2 class="section-title">
     The Problem
 </h2>
-<Icon name="tabler:search" width={100} />
+<Icon name="tabler:search" width={20} />
