--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,12 +21,8 @@ import Action from '../components/sections/Action.astro';
 
 <style is:global>
 	.section-title {
-		color: var(--gray-light);
+		color: var(--gray);
 		font-family: var(--font-display);
 		text-align: center;
 	}
-	.light .section-title {
-		color: var(--gray-dark);
-	}
-
 </style>
