clean up Layout file

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,5 +9,6 @@ const year = new Date().getFullYear()
     footer {
         text-align: center;
         opacity: .5;
+        margin-top: auto;
     }
 </style>
