--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -25,9 +25,9 @@ import { Icon } from "astro-icon";
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 10px 20px;
-        margin: 0 auto;
-        width: 1250px;
+        margin: 10px auto;
+        width: 100%;
+        max-width: 1250px;
     }
 
     .logo-name {
