--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -51,21 +51,33 @@ const { title } = Astro.props;
 	:root {
 		--black: #141316;
 		--white: #f5f4f5;
-		--gray: #B8B3BC;
 		--gray-mid: #7A7382;
+
+		--font-primary: 'Nunito', sans-serif;
+		--font-display: 'Permanent Marker', sans-serif;
 
 		--primary:#D86018;
 		--secondary: #D3449A;
 		--accent: #3D76E1;
+		--gray: #B8B3BC;
 		--primary-contrast: #C64C00;
 		--secondary-contrast: #960051;
 		--accent-contrast: #16408D;
 
 		--background-color: var(--black);
 		--text-color: var(--white);
+	}
+	[data-theme="light"]:root {
+		--primary: #C64C00;
+		--secondary: #960051;
+		--accent: #16408D;
+		--gray: #353238;
+		--primary-contrast:#D86018;
+		--secondary-contrast: #D3449A;
+		--accent-contrast: #3D76E1;
 
-		--font-primary: 'Nunito', sans-serif;
-		--font-display: 'Permanent Marker', sans-serif;
+		--background-color: var(--white);
+		--text-color: var(--black);
 	}
 	/* * { border: 1px solid blue } */
 	html {
@@ -74,27 +86,24 @@ const { title } = Astro.props;
 		color: var(--text-color);
 		background-color: var(--background-color);
 	}
-	[data-theme="light"]:root {
-		--background-color: var(--white);
-		--text-color: var(--black);
-		--primary: #C64C00;
-		--secondary: #960051;
-		--accent: #16408D;
-		--primary-contrast:#D86018;
-		--secondary-contrast: #D3449A;
-		--accent-contrast: #3D76E1;
-		--gray: #353238;
+	body {
+		width: 100%;
+		min-height: 100vh;
+		display: flex;
+		flex-direction: column;
+		overflow: hidden;
 	}
 	main {
 		margin: 0 auto;
+		width: 100%;
 		max-width: 1000px;
-		padding: 0 100px;
+		padding: 0 50px;
 	}
 	@media (max-width: 1000px) {
 		html {
 			font-size: 16px;
 		}
-		body {
+		main {
 			padding: 0 20px;
 		}
 	}
@@ -105,11 +114,11 @@ const { title } = Astro.props;
 		border-radius: 50px;
 		text-decoration: none;
 		color: var(--text-color);
+		font-size: .9em;
+		font-weight: bold;
 	}
-	.btn-secondary {
-		border: 1px solid var(--text-color);
-	}
-	.btn-secondary:hover {
-		background-color: var(--accent-contrast);
-	}
+	.btn-primary { background-color: var(--primary-contrast); }
+	.btn-primary:hover { background-color: var(--secondary-contrast); }
+	.btn-secondary { border: 1px solid var(--text-color); }
+	.btn-secondary:hover { background-color: var(--accent-contrast); }
 </style>
