--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -1,10 +1,50 @@
 ---
-interface Props {
-	title?: string;
-}
-
-const { title } = Astro.props;
+import { Icon } from "astro-icon";
 ---
-<h2 class="section-title">
-    Hero
-</h2>
+<div id="hero">
+    <h1 class="hero-title">
+        Elevate your Online Brand with a <span class="title-highlight">Custom Built</span> website
+    </h1>
+    <p class="hero-text">
+        Site builders, link pages, and other platforms offer a quick and easy way to get started, but to take things to the next level you need a custom built website that highlights the full uniqueness your brand and fits your specific business needs.
+    </p>
+    <div class="hero-buttons">
+        <a href="/start" class="btn btn-primary"><Icon name="tabler:arrow-big-right-lines" />Get Started</a>
+        <a href="#steps" class="btn btn-secondary">How It Works</a>
+    </div>
+    <div class="hero-video">
+        <iframe class="youtube-video" src="https://www.youtube.com/embed/_PEv9VeWtmY?si=OmcPSq0skTWSe_uR&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+</div>
+
+<style>
+    #hero {
+        margin-top: 4em;
+    }
+    .hero-title {
+        font-size: 3em;
+        font-family: var(--font-display);
+        text-align: center;
+        line-height: 1em;
+    }
+    .title-highlight {
+        color: var(--secondary);
+    }
+    .hero-text {
+        width: 800px;
+        color: var(--gray);
+        text-align: center;
+        margin: 1em auto;
+    }
+    .hero-buttons {
+        display: flex;
+        justify-content: center;
+    }
+    .hero-video {
+        margin: 4em auto;
+    }
+    .youtube-video {
+        aspect-ratio: 16 / 7;
+        width: 100%;
+    }
+</style>
