--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -103,7 +103,7 @@ const { title } = Astro.props;
 		min-height: 100vh;
 		display: flex;
 		flex-direction: column;
-		overflow: hidden;
+		/* overflow-x: hidden; */
 	}
 	main {
 		margin: 0 auto;
@@ -122,12 +122,19 @@ const { title } = Astro.props;
 
 	.btn {
 		margin: 0 1em;
-		padding: .7em 1.4em;
+		padding: .7em 2em;
 		border-radius: 50px;
 		text-decoration: none;
 		color: var(--text-color);
 		font-size: .9em;
 		font-weight: bold;
+		display: flex;
+		align-items: center;
+	}
+	.btn svg {
+		height: 1.5em;
+		width: auto;
+		margin-right: .5em;
 	}
 	.btn-primary { background-color: var(--primary-contrast); }
 	.btn-primary:hover { background-color: var(--secondary-contrast); }
