--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,9 +20,22 @@ import Action from '../components/sections/Action.astro';
 </Layout>
 
 <style is:global>
-	.section-title {
-		color: var(--gray);
-		font-family: var(--font-display);
+	.section-heading {
+		text-transform: uppercase;
 		text-align: center;
+		color: var(--secondary);
+		font-size: .9em;
+		letter-spacing: .05em;
+	}
+	.section-title {
+		font-family: var(--font-display);
+		font-size: 2.5em;
+		text-align: center;
+		line-height: 1em;
+		width: 800px;
+		margin: 0 auto;
+	}
+	.section-intro {
+		color: var(--gray);
 	}
 </style>
