complete solution section

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -1,7 +1,7 @@
 ---
 import { Icon } from "astro-icon";
 ---
-<div id="hero">
+<div id="hero" class="section">
     <h1 class="hero-title">
         Elevate your Online Brand with a <span class="title-highlight">Custom Built</span> website
     </h1>
