--- a/src/components/sections/Problem.astro
+++ b/src/components/sections/Problem.astro
@@ -1,7 +1,7 @@
 ---
 import { Icon } from 'astro-icon';
 ---
-<div id="problem">
+<div id="problem" class="section">
     <h3 class="section-heading">
         The Problem
     </h3>
