complete steps section

--- a/src/components/sections/Solution.astro
+++ b/src/components/sections/Solution.astro
@@ -136,7 +136,7 @@ import MobilePosts from '../../assets/undraw_mobile_posts_re_bpuw.png'
         margin-bottom: 1em;
     }
     .section-content-image, .section-content-text {
-        width: 48%;
+        width: 47%;
     }
     .section-content-image img {
         width: 100%;
@@ -164,9 +164,11 @@ import MobilePosts from '../../assets/undraw_mobile_posts_re_bpuw.png'
         flex-shrink: 100;
         margin-left: 1em;
     }
+    .item-text-title {
+        margin-bottom: .4em;
+    }
     .item-text-content {
         color: var(--gray);
-        margin-top: .5em;
         font-size: .9em;
     }
 </style>
