--- a/src/components/sections/Steps.astro
+++ b/src/components/sections/Steps.astro
@@ -1,5 +1,140 @@
 ---
+import { Image } from 'astro:assets';
+import { Icon } from 'astro-icon';
+
+import MobileDevelopment from '../../assets/undraw_mobile_development_re_wwsn.png';
 ---
-<h2 class="section-title">
-    Steps
-</h2>
+<div id="steps" class="section">
+    <div class="section-content">
+        <h2 class="title">
+            theRamoShe will get your site up and running
+        </h2>
+        <ul class="content-list">
+            <li class="content-item">
+                <div class="item-iconline">
+                    <div class="item-icon"><Icon name="tabler:messages" /></div>
+                    <div class="item-line"></div>
+                </div>
+                <div class="item-content">
+                    <h4 class="item-title">
+                        Step 1: <span class="step">Consult</span>
+                    </h4>
+                    <p class="item-text">
+                        We start by scheduling a virtual meeting with the goal of gaining a deep level understanding of your business—what you have, what you need, and what is going to work best for presenting your brand online.
+                    </p>
+                </div>
+            </li>
+            <li class="content-item">
+                <div class="item-iconline">
+                    <div class="item-icon"><Icon name="tabler:paint" /></div>
+                    <div class="item-line"></div>
+                </div>
+                <div class="item-content">
+                    <h4 class="item-title">
+                        Step 2: <span class="step">Design</span>
+                    </h4>
+                    <p class="item-text">
+                        The design process includes color palette selection and design of branding assets needed. The result will be sketches or mockups that we'll work with for approval before moving on to building.
+                    </p>
+                </div>
+            </li>
+            <li class="content-item">
+                <div class="item-iconline">
+                    <div class="item-icon"><Icon name="tabler:apps" /></div>
+                    <div class="item-line"></div>
+                </div>
+                <div class="item-content">
+                    <h4 class="item-title">
+                        Step 3: <span class="step">Build</span>
+                    </h4>
+                    <p class="item-text">
+                        Depending on the needs of your brand your website may either be hand coded or built with WordPress. Either way the final site will be fully mobile responsive and accessible for all users.
+                    </p>
+                </div>
+            </li>
+            <li class="content-item">
+                <div class="item-iconline">
+                    <div class="item-icon end"><Icon name="tabler:device-desktop" /></div>
+                </div>
+                <div class="item-content">
+                    <h4 class="item-title">
+                        Ready to let your brand shine!
+                    </h4>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <div class="section-image">
+        <Image src={MobileDevelopment} alt="" />
+    </div>
+</div>
+
+<style>
+    #steps {
+        margin: 4em auto;
+        display: flex;
+        justify-content: space-between;
+    }
+    ul { padding: 0; }
+    li { list-style-type: none; }
+    .section-content, .section-image {
+        width: 47%;
+    }
+    .section-image img {
+        width: 100%;
+        height: auto;
+    }
+    .title {
+        font-family: var(--font-display);
+        font-size: 2em;
+        line-height: 1em;
+        margin-bottom: 1em;
+    }
+
+    .content-item {
+        display: flex;
+    }
+    .item-iconline {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .item-icon {
+        width: 50px;
+        height: 50px;
+        border: 3px solid var(--primary-contrast);
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .item-icon.end {
+        background-color: var(--primary-contrast);
+    }
+    .item-icon svg {
+        width: 30px;
+        height: auto;
+    }
+    .item-line {
+        background-color: var(--gray-mid);
+        width: 1px;
+        height: 100%;
+        flex-shrink: 100;
+    }
+    .item-content {
+        flex-shrink: 100;
+        margin-left: 1em;
+    }
+    .item-title {
+        font-size: 1.2em;
+        margin-top: .3em;
+    }
+    .item-title .step {
+        font-weight: 400;
+    }
+    .item-text {
+        color: var(--gray);
+        font-size: .9em;
+        margin: .5em 0 1em;
+    }
+</style>
