complete clients section

--- a/src/components/sections/Solution.astro
+++ b/src/components/sections/Solution.astro
@@ -44,10 +44,10 @@ import MobilePosts from '../../assets/undraw_mobile_posts_re_bpuw.png'
                     <div class="item-icon"><Icon name='tabler:arrow-right' /></div>
                     <div class="item-text">
                         <h4 class="item-text-title">
-                            The right template with deep customization
+                            Responsive and accessible design
                         </h4>
                         <p class="item-text-content">
-                            Using templates can be tricky—they make your website look polished and professional, but choosing the right template and making the right customizations makes all the difference.
+                            In today's era it's more important than ever that your website is accessible to all types of users on all types of devices.
                         </p>
                     </div>
                 </li>
@@ -67,7 +67,7 @@ import MobilePosts from '../../assets/undraw_mobile_posts_re_bpuw.png'
                     <div class="item-icon"><Icon name='tabler:arrow-right' /></div>
                     <div class="item-text">
                         <h4 class="item-text-title">
-                            Fully responsive for all device sizes
+                            Full custom website design
                         </h4>
                     </div>
                 </li>
