--- a/src/components/sections/Steps.astro
+++ b/src/components/sections/Steps.astro
@@ -48,7 +48,7 @@ import MobileDevelopment from '../../assets/undraw_mobile_development_re_wwsn.pn
                         Step 3: <span class="step">Build</span>
                     </h4>
                     <p class="item-text">
-                        Depending on the needs of your brand your website may either be hand coded or built with WordPress. Either way the final site will be fully mobile responsive and accessible for all users.
+                        You'll be able to watch your website as it comes to life! We'll work together on filling in content and testing everything before launch.
                     </p>
                 </div>
             </li>
@@ -71,7 +71,7 @@ import MobileDevelopment from '../../assets/undraw_mobile_development_re_wwsn.pn
 
 <style>
     #steps {
-        margin: 4em auto;
+        margin: 4em auto 0;
         display: flex;
         justify-content: space-between;
     }
