complete questions section

--- a/src/components/sections/Clients.astro
+++ b/src/components/sections/Clients.astro
@@ -78,7 +78,7 @@ import { Icon } from "astro-icon";
         padding: 1em 1.2em;
         border: 1px solid var(--gray-contrast);
         border-radius: 7px;
-        box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.1) 0px 4px 6px -4px;
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.1) 0px 4px 6px -4px;
     }
     .client-logo {
         height: 30px;
@@ -94,5 +94,8 @@ import { Icon } from "astro-icon";
         color: var(--accent);
         text-decoration: none;
         white-space: nowrap;
+    }
+    .client-text a:hover {
+        text-decoration: underline;
     }
 </style>
