--- a/src/components/sections/Action.astro
+++ b/src/components/sections/Action.astro
@@ -1,5 +1,45 @@
 ---
+import { Icon } from "astro-icon";
 ---
-<h2 class="section-title">
-    Action
-</h2>
+<div id="action" class="section">
+    <div class="section-container">
+        <h2 class="section-title">
+            More Deets!
+        </h2>
+        <p class="section-content">
+            Want more details about Myte's services and their pricing? <br class="hidden md:inline" />Click below to see a PDF with all the details!
+        </p>
+        <a href="/Myte_Pricing_Services.pdf" target="_blank" class="btn btn-primary"><Icon name="tabler:arrow-big-right-lines" />View Details</a>
+    </div>
+</div>
+
+<style>
+    .btn { width: fit-content; }
+
+    #action {
+        margin: 7em 0;
+    }
+
+    .section-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border: 1px solid var(--gray-mid);
+        border-radius: 20px;
+        width: fit-content;
+        margin: 0 auto;
+        padding: 2em 0;
+    }
+    .section-content {
+        margin: 1em 0;
+        text-align: center;
+    }
+    @media (max-width: 800px) {
+        .section-container {
+            padding: 2em;
+        }
+        .section-content br {
+            display: none;
+        }
+    }
+</style>
