complete footer section

--- a/src/components/sections/Questions.astro
+++ b/src/components/sections/Questions.astro
@@ -69,7 +69,7 @@ import { Icon } from "astro-icon";
                         How do I get started with my custom site?
                     </h4>
                     <p class="item-text">
-                        The first step is <a href="/contact" class="text-accent dark:text-accentlt hover:underline">filling out the form at this link</a> to let me know a little bit about what you're looking for. After the form you'll also <a href="/thankyou" class="text-accent dark:text-accentlt hover:underline">get a few steps that you can complete</a> to prepare for the consult meeting where we'll get the process started.
+                        The first step is <a href="/contact">filling out the form at this link</a> to let me know a little bit about what you're looking for. After the form you'll also <a href="/thankyou">get a few steps that you can complete</a> to prepare for the consult meeting where we'll get the process started.
                     </p>
                 </li>
             </ul>
@@ -78,6 +78,8 @@ import { Icon } from "astro-icon";
 </div>
 
 <style>
+    ul { padding: 0; }
+    li { list-style-type: none; }
     #questions {
         margin: 4em 0;
     }
