add sitemap and robots for seo

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -21,11 +21,11 @@ const year = new Date().getFullYear()
                         <Icon name="tabler:brand-tiktok" class="social-icon" />
                     </a>
                 </li>
-                <!-- <li class="social-item">
+                <li class="social-item">
                     <a href="https://twitter.com/theramoshe" target="_blank" aria-label="Twitter">
                         <Icon name="tabler:brand-x" class="social-icon" />
                     </a>
-                </li> -->
+                </li>
                 <li class="social-item">
                     <a href="https://facebook.com/theramoshe" target="_blank" aria-label="Facebook">
                         <Icon name="tabler:brand-facebook" class="social-icon" />
@@ -44,7 +44,7 @@ const year = new Date().getFullYear()
             </ul>
         </div>
         <div class="copyright">
-            <p>&copy; {year} theRamoShe</p>
+            <p>&copy; {year} theRamoShe · All rights reserved.</p>
         </div>
     </div>
 </footer>
