--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,9 +7,10 @@ import Footer from "../components/Footer.astro";
 
 interface Props {
 	title: string;
+	description?: string;
 }
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <!doctype html>
@@ -28,10 +29,10 @@ const { title } = Astro.props;
 
 		<SEO
 			title="theRamoShe"
-			description="Baltimore based Content Creator, Web Designer and Developer, Wood Burning Artist, Live Streamer, and all around nice person."
+			description={description ? description : "Baltimore based Content Creator, Web Designer and Developer, Wood Burning Artist, Live Streamer, and all around nice person."}
 			openGraph={{
 				basic: {
-				title: "theRamoShe",
+				title: "Myte by theRamoShe",
 				type: "website",
 				image: "https://new.myte.site/ogimg.png",
 				}
