--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ interface Props {
 
 const { title, description } = Astro.props;
 ---
-
+<!-- TODO Change Site URL -->
 <!doctype html>
 <html lang="en">
 	<head>
@@ -38,6 +38,7 @@ const { title, description } = Astro.props;
 				}
 			}}
 		/>
+		<link rel="sitemap" href="/sitemap-index.xml" />
 
 		<Resets
 			removeAllMargins={true}
