--- a/src/components/sections/Clients.astro
+++ b/src/components/sections/Clients.astro
@@ -98,4 +98,10 @@ import { Icon } from "astro-icon";
     .client-text a:hover {
         text-decoration: underline;
     }
+
+    @media (max-width: 800px) {
+        .client-card {
+            min-width: 400px;
+        }
+    }
 </style>
