--- a/src/components/sections/Problem.astro
+++ b/src/components/sections/Problem.astro
@@ -88,7 +88,7 @@ import { Icon } from 'astro-icon';
         margin-bottom: 4em;
     }
     .section-intro {
-        width: 800px;
+        width: 80%;
         text-align: center;
         margin: 1em auto 2em;
     }
@@ -127,5 +127,11 @@ import { Icon } from 'astro-icon';
     .item-text-content {
         font-size: .9em;
         color: var(--gray);
+    }
+
+    @media (max-width: 800px) {
+        .content-item {
+            width: 100%;
+        }
     }
 </style>
