--- a/src/components/sections/Questions.astro
+++ b/src/components/sections/Questions.astro
@@ -15,28 +15,34 @@ import { Icon } from "astro-icon";
         <div class="section-column">
             <ul class="content-list">
                 <li class="content-item">
-                    <Icon class="item-icon" name="tabler:arrow-down-right" />
-                    <h4 class="item-title">
-                        Who is theRamoShe? Why is she the best?
-                    </h4>
+                    <div class="item-icontitle">
+                        <Icon class="item-icon" name="tabler:arrow-down-right" />
+                        <h4 class="item-title">
+                            Who is theRamoShe? Why is she the best?
+                        </h4>
+                    </div>
                     <p class="item-text">
                         Rachel M. Sherard has a educational background in Media Production, Marketing Communications, Visual Art, and User Experience Design. With the power of these skills and a healthy dash of OCD, she will make sure that the job is done right.
                     </p>
                 </li>
                 <li class="content-item">
-                    <Icon class="item-icon" name="tabler:arrow-down-right" />
-                    <h4 class="item-title">
-                        What types of features can my website have?
-                    </h4>
+                    <div class="item-icontitle">
+                        <Icon class="item-icon" name="tabler:arrow-down-right" />
+                        <h4 class="item-title">
+                            What types of features can my website have?
+                        </h4>
+                    </div>
                     <p class="item-text">
                         Examples include: links to/embeds of social media, personal blog, photo or video gallery, custom forms, payment widgets, and anything you can dream of that is possible with code.
                     </p>
                 </li>
                 <li class="content-item">
-                    <Icon class="item-icon" name="tabler:arrow-down-right" />
-                    <h4 class="item-title">
-                        How can I use the work I've already done?
-                    </h4>
+                    <div class="item-icontitle">
+                        <Icon class="item-icon" name="tabler:arrow-down-right" />
+                        <h4 class="item-title">
+                            How can I use the work I've already done?
+                        </h4>
+                    </div>
                     <p class="item-text">
                         There are many ways that you might be able to integrate other platforms or transfer content from your existing site to your new one. We'll be sure to go over all of this in your initial consult.
                     </p>
@@ -46,28 +52,34 @@ import { Icon } from "astro-icon";
         <div class="section-column">
             <ul class="content-list">
                 <li class="content-item">
-                    <Icon class="item-icon" name="tabler:arrow-down-right" />
-                    <h4 class="item-title">
-                        How much will all of this cost?
-                    </h4>
+                    <div class="item-icontitle">
+                        <Icon class="item-icon" name="tabler:arrow-down-right" />
+                        <h4 class="item-title">
+                            How much will all of this cost?
+                        </h4>
+                    </div>
                     <p class="item-text">
                         Check out the <a href="/Myte_Services_Pricing.pdf" target="_blank">Myte Services & Pricing</a> (PDF Document - opens in a new tab) for all the details you desire about the services that Myte and theRamoShe provides.
                     </p>
                 </li>
                 <li class="content-item">
-                    <Icon class="item-icon" name="tabler:arrow-down-right" />
-                    <h4 class="item-title">
-                        Will I be able to make edits and updates?
-                    </h4>
+                    <div class="item-icontitle">
+                        <Icon class="item-icon" name="tabler:arrow-down-right" />
+                        <h4 class="item-title">
+                            Will I be able to make edits and updates?
+                        </h4>
+                    </div>
                     <p class="item-text">
                         Absolutely! Your website build includes a customized backend for your site where you'll be able to edit whichever content bits you desire. And if you ever need design changes or deeper edits to your site, you can count on Myte to be there for you!
                     </p>
                 </li>
                 <li class="content-item">
-                    <Icon class="item-icon" name="tabler:arrow-down-right" />
-                    <h4 class="item-title">
-                        How do I get started with my custom site?
-                    </h4>
+                    <div class="item-icontitle">
+                        <Icon class="item-icon" name="tabler:arrow-down-right" />
+                        <h4 class="item-title">
+                            How do I get started with my custom site?
+                        </h4>
+                    </div>
                     <p class="item-text">
                         The first step is <a href="/contact">filling out the form at this link</a> to let me know a little bit about what you're looking for. After the form you'll also <a href="/thankyou">get a few steps that you can complete</a> to prepare for the consult meeting where we'll get the process started.
                     </p>
@@ -103,10 +115,10 @@ import { Icon } from "astro-icon";
         align-items: flex-start;
     }
     .content-item {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: flex-start;
         margin-bottom: 2em;
+    }
+    .item-icontitle {
+        display: flex;
     }
     .item-icon {
         width: 30px;
@@ -115,7 +127,7 @@ import { Icon } from "astro-icon";
         margin-right: .5em;
     }
     .item-title {
-        height: 1em;
+        flex-shrink: 100;
     }
     .item-text {
         color: var(--gray);
