--- a/src/components/sections/Solution.astro
+++ b/src/components/sections/Solution.astro
@@ -171,4 +171,18 @@ import MobilePosts from '../../assets/undraw_mobile_posts_re_bpuw.png'
         color: var(--gray);
         font-size: .9em;
     }
+
+    @media (max-width: 800px) {
+        .section-content {
+            flex-wrap: wrap;
+        }
+        .section-content-image, .section-content-text {
+            width: 100%;
+        }
+        .section-content-image {
+            order: 2;
+            width: 80%;
+            margin: 0 auto;
+        }
+    }
 </style>
