--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,7 @@ interface Props {
 const { title, description } = Astro.props;
 ---
 <!-- TODO Change Site URL -->
+<!-- TODO Add favicon -->
 <!doctype html>
 <html lang="en">
 	<head>
@@ -28,7 +29,7 @@ const { title, description } = Astro.props;
 		<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Permanent+Marker&display=swap" rel="stylesheet">
 
 		<SEO
-			title="theRamoShe"
+			title="Myte by theRamoShe"
 			description={description ? description : "Baltimore based Content Creator, Web Designer and Developer, Wood Burning Artist, Live Streamer, and all around nice person."}
 			openGraph={{
 				basic: {
@@ -115,7 +116,7 @@ const { title, description } = Astro.props;
 	}
 	@media (max-width: 1000px) {
 		html {
-			font-size: 16px;
+			font-size: 18px;
 		}
 		main {
 			padding: 0 20px;
@@ -123,7 +124,7 @@ const { title, description } = Astro.props;
 	}
 
 	.btn {
-		margin: 0 1em;
+		margin: 1em;
 		padding: .7em 2em;
 		border-radius: 50px;
 		text-decoration: none;
@@ -132,6 +133,7 @@ const { title, description } = Astro.props;
 		font-weight: bold;
 		display: flex;
 		align-items: center;
+		justify-content: center;
 	}
 	.btn svg {
 		height: 1.5em;
