--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ import Action from '../components/sections/Action.astro';
 		font-size: 2.5em;
 		text-align: center;
 		line-height: 1em;
-		width: 800px;
+		max-width: 800px;
 		margin: 0 auto;
 	}
 	.section-intro {
