change images and add auxiliary pages

--- a/src/components/sections/Action.astro
+++ b/src/components/sections/Action.astro
@@ -7,7 +7,7 @@ import { Icon } from "astro-icon";
             More Deets!
         </h2>
         <p class="section-content">
-            Want more details about Myte's services and their pricing? <br class="hidden md:inline" />Click below to see a PDF with all the details!
+            Want more details about Myte's services and their pricing? <br />Click below to see a PDF with all the details!
         </p>
         <a href="/Myte_Services_Pricing.pdf" target="_blank" class="btn btn-primary"><Icon name="tabler:arrow-big-right-lines" />View Details</a>
     </div>
