--- a/src/components/sections/Steps.astro
+++ b/src/components/sections/Steps.astro
@@ -2,7 +2,7 @@
 import { Image } from 'astro:assets';
 import { Icon } from 'astro-icon';
 
-import MobileDevelopment from '../../assets/undraw_mobile_development_re_wwsn.png';
+import Image3 from '../../assets/undraw_develop_app_re_bi4i.svg';
 ---
 <div id="steps" class="section">
     <div class="section-content">
@@ -65,7 +65,7 @@ import MobileDevelopment from '../../assets/undraw_mobile_development_re_wwsn.pn
         </ul>
     </div>
     <div class="section-image">
-        <Image src={MobileDevelopment} alt="" />
+        <Image src={Image3} alt="" />
     </div>
 </div>
 
@@ -73,7 +73,7 @@ import MobileDevelopment from '../../assets/undraw_mobile_development_re_wwsn.pn
     ul { padding: 0; }
     li { list-style-type: none; }
     #steps {
-        margin: 4em auto 0;
+        margin: 4em auto;
         display: flex;
         justify-content: space-between;
         align-items: center;
