fix width of client cards on moble

--- a/src/components/sections/Clients.astro
+++ b/src/components/sections/Clients.astro
@@ -101,7 +101,7 @@ import { Icon } from "astro-icon";
 
     @media (max-width: 800px) {
         .client-card {
-            min-width: 400px;
+            min-width: 80%;
         }
     }
 </style>
