fix stuff for lighthouse score

--- a/src/components/sections/Action.astro
+++ b/src/components/sections/Action.astro
@@ -28,7 +28,7 @@ import { Icon } from "astro-icon";
         border-radius: 20px;
         width: fit-content;
         margin: 0 auto;
-        padding: 2em 0;
+        padding: 2em 3em;
     }
     .section-content {
         margin: 1em 0;
