--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -62,9 +62,9 @@ const { title, description } = Astro.props;
 </html>
 <style is:global>
 	:root {
-		--black: #141316;
-		--white: #f5f4f5;
-		--gray-mid: #7A7382;
+		--black: #201E1D;
+		--white: #f5f5f4;
+		--gray-mid: #7d746e;
 
 		--font-primary: 'Nunito', sans-serif;
 		--font-display: 'Permanent Marker', sans-serif;
@@ -72,8 +72,8 @@ const { title, description } = Astro.props;
 		--primary:#D86018;
 		--secondary: #D3449A;
 		--accent: #3D76E1;
-		--gray: #B8B3BC;
-		--gray-contrast: #353238;
+		--gray: #E2E0DF;
+		--gray-contrast: #2B2826;
 		--primary-contrast: #C64C00;
 		--secondary-contrast: #960051;
 		--accent-contrast: #16408D;
@@ -85,8 +85,8 @@ const { title, description } = Astro.props;
 		--primary: #C64C00;
 		--secondary: #960051;
 		--accent: #16408D;
-		--gray: #353238;
-		--gray-contrast: #B8B3BC;
+		--gray: #2B2826;
+		--gray-contrast: #E2E0DF;
 		--primary-contrast:#D86018;
 		--secondary-contrast: #D3449A;
 		--accent-contrast: #3D76E1;
@@ -107,6 +107,7 @@ const { title, description } = Astro.props;
 		display: flex;
 		flex-direction: column;
 		/* overflow-x: hidden; */
+		font-display: optional;
 	}
 	main {
 		margin: 0 auto;
