--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,8 +12,6 @@ interface Props {
 
 const { title, description } = Astro.props;
 ---
-<!-- TODO Change Site URL -->
-<!-- TODO Add favicon -->
 <!doctype html>
 <html lang="en">
 	<head>
@@ -41,7 +39,7 @@ const { title, description } = Astro.props;
 				basic: {
 				title: "Myte by theRamoShe",
 				type: "website",
-				image: "https://new.myte.site/ogimg.png",
+				image: "https://myte.site/ogimg.png",
 				}
 			}}
 		/>
